post delete 기능 추가

--- a/server/apps/posts/templates/posts/posts_retrieve.html
+++ b/server/apps/posts/templates/posts/posts_retrieve.html
@@ -11,3 +11,9 @@
 <br />
 <small>수정일: {{ post.updated_at }}</small>
 <br />
+
+<hr />
+<form action="/posts/{{ post.id }}/delete" method="post">
+    {% csrf_token %}
+    <input type="submit" value="삭제하기" />
+</form>
